--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
 .cabecalho{
     background-color: var(--cor-fundo);
     color:var(--cor-fontes)
+    display:flex; 
+    justify-content:space-around;
+
 }
 .imagem-cabecalho{
     width: 15%;
