--- a/style.css
+++ b/style.css
@@ -7,8 +7,9 @@
     color:var(--cor-fontes);
     display:flex; 
     justify-content:space-around;
-
+    align-items:center ;
+    padding: 24px 0;
 }
 .imagem-cabecalho{
-    width: 15%;
+    width: 10%;
 }
