--- a/style.css
+++ b/style.css
@@ -26,5 +26,5 @@ padding: 0;
     width: 25%;
 }
 .escola{
-    background-image: rgba(194, 64, 255, 1);
+    background-image: rgba(194, 64, 255, 1), rgba(0, 0, 0, 1);
 }
