--- a/style.css
+++ b/style.css
@@ -26,5 +26,7 @@ padding: 0;
     width: 25%;
 }
 .escola{
-    background-image: rgba(194, 64, 255, 1), rgba(0, 0, 0, 1);
+    background-image: linear-gradient(#9B00E4, #000000);
+    color: var(--cor-fontes);
+    display:flex;
 }
