--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ padding: 0;
     width: 25%;
 }
 .escola{
-    background-image: linear-gradient(#9B00E4, #000000);
+    background-image: linear-gradient(#C240FF, #000000);
     color: var(--cor-fontes);
     display:flex;
 }
