--- a/style.css
+++ b/style.css
@@ -31,10 +31,11 @@ padding: 0;
     display:flex;
     align-items: center;
     padding: 24px 0;
+    padding-left: 15%;
     }
     .escola-div-conteudo{
         width: 35%;
     }
     .escola-titulo{
-        padding: ;
+        padding: 24px 0;
     }
