--- a/style.css
+++ b/style.css
@@ -39,3 +39,33 @@ padding: 0;
     .escola-titulo{
         padding: 24px 0;
     }
+
+    .escola-div-conteudo{
+    width: 35%;
+    }
+    .escola-titulo{
+    padding: 24px 0;
+    }
+    .estudante-imagem{
+    width: 20%;
+    }
+    .estudante-icone{
+    width: 24px;
+    padding: 4px 8px;
+    }
+    .estudante-div{
+    text-align: center;
+    padding: 16px 0;
+    }
+    .estudante-todos{
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    }
+    .rodape{
+    background-color: #C240FF;
+    text-align: center;
+    }
+    .rodape-imagem{
+    height: 60px;
+    padding: 12px 0;
+    }
