--- a/style.css
+++ b/style.css
@@ -48,8 +48,9 @@ padding: 0;
     }
     .estudante{
     background-color: red;
+    }
     .estudante-imagem{
-    width: 10%;
+    width: 30%;
     }
     .estudante-icone{
     width: 24px;
