--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ padding: 0;
     padding: 24px 0;
     }
     .estudante{
-    background-color: red;
+    background-color: rgb(20, 20, 20);
     }
     .estudante-imagem{
     width: 40%;
