--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ padding: 0;
     grid-template-columns: 25% 25% 25% 25%;
     }
     .rodape{
-    background-color: #C240FF;
+    background-color: #b990cc;
     text-align: center;
     }
     .rodape-imagem{
